<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#e2efd9"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:background="#444eb9"
        android:weightSum="1"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/imageButtonBack"
            android:src="@drawable/back"
            android:background="#444eb9"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_one"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            android:background="#444eb9"
            android:layout_marginStart="80dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:enabled="false"
            android:hint="@string/size"
            android:textIsSelectable="false"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/texttype"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:clickable="false"
        android:textColor="#0472f8"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textStyle="bold"
        android:id="@+id/texttimeshow"
        android:layout_gravity="center_horizontal"
        android:textColor="#0472f8"
        android:layout_below="@+id/texttype"
        android:layout_toStartOf="@+id/spinner_type"
        android:layout_marginTop="44dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fee"
        android:textStyle="bold"
        android:id="@+id/textfeeshow"
        android:layout_gravity="center_horizontal"
        android:textColor="#0472f8"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/edit_text_time"
        android:layout_toStartOf="@+id/spinner_type"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textStyle="bold"
        android:id="@+id/textremarksshow"
        android:layout_gravity="center_horizontal"
        android:textColor="#0472f8"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editText_fee"
        android:layout_toStartOf="@+id/spinner_type"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/spinner_type"
        android:spinnerMode="dialog"
        android:entries="@array/payment_type"
        android:layout_alignBottom="@+id/texttype"
        android:layout_toEndOf="@+id/texttype"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="50dp"
        android:gravity="center_vertical|center"
        android:touchscreenBlocksFocus="false"
        android:layout_alignParentStart="false"
        style="@android:style/TextAppearance.Holo"/>

    <TextView
        android:id="@+id/edit_text_time"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@android:drawable/edit_text"
        android:layout_alignTop="@+id/texttimeshow"
        android:layout_alignStart="@+id/spinner_type"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="#736bae"/>

    <EditText
        android:id="@+id/editText_fee"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:drawable/edit_text"
        android:layout_alignTop="@+id/textfeeshow"
        android:layout_alignStart="@+id/edit_text_time"
        android:textColor="#fc0303"
        android:gravity="center"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText_remarks"
        android:layout_width="200dp"
        android:layout_height="94dp"
        android:layout_alignStart="@+id/editText_fee"
        android:layout_alignTop="@+id/textremarksshow"
        android:width="10dp"
        android:background="@android:drawable/edit_text"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="#5e5b5b"
        android:textSize="14sp"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:id="@+id/plan_sure"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/editText_remarks"
        android:layout_alignStart="@+id/texttype"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/button_cancel"
        android:background="@drawable/buttonshape"
        android:layout_alignTop="@+id/plan_sure"
        android:layout_alignEnd="@+id/editText_remarks"
        android:layout_marginEnd="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomes"
            android:id="@+id/radioButton"
            android:checked="false"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcomes"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:layout_marginStart="50dp"/>

    </RadioGroup>

</RelativeLayout>