<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:background="#444eb9"
        android:weightSum="1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/返回按钮"
            android:src="@drawable/back"
            android:background="#444eb9"
            android:contentDescription="@string/desc_back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_money"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            android:background="#444eb9"
            android:layout_marginStart="80dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:enabled="false"
            android:hint="@string/size"
            android:textIsSelectable="false"
            android:textSize="20sp"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_bills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#ffffff"
        android:dividerHeight="1dip"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:background="#fbf5f5"/>
</RelativeLayout>